# anolisa

./: AGENTS.md
src/agent-memory/: CHANGELOG.md  Cargo.toml  Makefile  agent-memory.spec.in
src/agent-memory/adapters/agent-memory/: manifest.json
src/agent-memory/adapters/agent-memory/openclaw/: .gitignore  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
src/agent-memory/config/: mcp-server.json
src/agent-memory/docs/: user_manual.md  user_manual.zh.md
src/agent-memory/src/: config.rs  safety.rs
src/agent-memory/src/consolidation/: fact.rs  heuristics.rs  mod.rs  quality.rs  writer.rs
src/agent-memory/src/index/: mod.rs  store.rs  worker.rs
src/agent-memory/src/mcp_server/: tools.rs
src/agent-memory/src/safe_fs/: mod.rs
src/agent-memory/src/service/: mod.rs
src/agent-memory/src/tools/: memory_get_context.rs  memory_search.rs  memory_sovereignty.rs  mod.rs
src/agent-memory/tests/: mcp_integration_test.rs  profile_test.rs  tier_b_test.rs
src/anolisa/: CHANGELOG.md  Cargo.toml  anolisa.spec.in
src/anolisa/crates/anolisa-build/: Cargo.toml
src/anolisa/crates/anolisa-cli/: Cargo.toml
src/anolisa/crates/anolisa-cli/src/: color.rs  commands.rs  context.rs  repo_config.rs  response.rs
src/anolisa/crates/anolisa-core/: Cargo.toml
src/anolisa/crates/anolisa-core/src/: adapter.rs  backup.rs  capability.rs  catalog.rs  central_log.rs  component.rs  contract_lint.rs  daemon_server.rs  dependency.rs  disable_execute.rs  distribution.rs  download.rs  enable_execute.rs  enable_plan.rs  feature_flags.rs  hooks.rs  install_runner.rs  integrity.rs  lib.rs  lifecycle.rs  lock.rs  manifest.rs  osbase_install.rs  path_safety.rs  provisioner.rs  registry.rs  sandbox_install.rs  sandbox_manifest.rs  self_update.rs  service.rs  state.rs  subscription.rs  telemetry.rs  transaction.rs
src/anolisa/crates/anolisa-core/tests/: adapter_manager.rs  capability_manifest.rs  generic_capability_lifecycle.rs
src/anolisa/crates/anolisa-env/src/: lib.rs
src/anolisa/crates/anolisa-platform/src/: command.rs  fs_layout.rs  lib.rs  pkg_query.rs  rpm_query.rs  systemd.rs
src/anolisa/docs/: BUILD.md  BUILD_cn.md
src/anolisa/manifests/: repo.toml  sandbox.toml
src/anolisa/manifests/capabilities/: agent-gateway.toml  cosh.toml  os-security.toml  sandbox.toml
src/anolisa/manifests/distribution-index/: index.oss.toml  index.toml
src/anolisa/manifests/runtime/: agent-memory.toml  cosh.toml  os-skills.toml  tokenless.toml
src/anolisa/npm/: .npmrc  README.md  package.json
src/anolisa/npm/scripts/: package-npm.js  postinstall.js
src/anolisa/scripts/: demo-agent-observability-disable.sh  demo-agent-observability-uninstall.sh  demo-agent-observability.sh  demo-token-optimization.sh  install-anolisa.sh
src/anolisa/systemd/: anolisa-system-helper.service.in
src/anolisa/templates/: component-runtime.toml  installed-state.toml  release-manifest.toml
src/cosh-ng/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  component.toml  cosh-ng.spec.in  rustfmt.toml
src/cosh-ng/.cargo/: config.toml
src/cosh-ng/crates/cosh-cli/: Cargo.toml
src/cosh-ng/crates/cosh-cli/src/: main.rs
src/cosh-ng/crates/cosh-cli/tests/: cli_integration.rs
src/cosh-ng/crates/cosh-core/: Cargo.toml
src/cosh-ng/crates/cosh-core/src/: auth.rs  cli.rs  compression.rs  config.rs  context.rs  core.rs  headless.rs  hook.rs  interactive.rs  logging.rs  loop_detect.rs  main.rs  migrate.rs  protocol.rs  registry.rs  session.rs  sls.rs  state.rs  truncator.rs
src/cosh-ng/crates/cosh-core/tests/: jsonl_protocol.rs  registry_protocol.rs  sls_integration.rs  tool_approval.rs
src/cosh-ng/crates/cosh-platform/: Cargo.toml
src/cosh-ng/crates/cosh-platform/src/: checkpoint.rs  detect.rs  lib.rs  pkg.rs  svc.rs
src/cosh-ng/crates/cosh-shell/: Cargo.toml
src/cosh-ng/crates/cosh-shell/scripts/: inventory-public-api.sh
src/cosh-ng/crates/cosh-shell/src/: adapter.rs  agent_render.rs  agent_run_runtime.rs  approval_runtime.rs  approved_tool_runtime.rs  builtin_hooks.rs  command_hook_runtime.rs  config.rs  context_window.rs  exit_classify.rs  failed_command_runtime.rs  governance.rs  hook_engine.rs  hook_types.rs  input.rs  intercept_runtime.rs  lib.rs  logging.rs  main.rs  mode_runtime.rs  parser.rs  question_runtime.rs  raw_input.rs  runtime_state.rs  shell_host.rs  slash_runtime.rs  startup_runtime.rs  tool_broker.rs  tool_display.rs  types.rs
src/cosh-ng/crates/cosh-shell/tests/: ask_user_e2e.rs  control_protocol.rs  mock_control_cli.sh  mock_control_cli_multi.sh  mock_control_cli_write_file.sh  mvp_loop.rs  raw_cli.rs  shell_host.rs
src/cosh-ng/crates/cosh-tui/: Cargo.toml
src/cosh-ng/crates/cosh-tui/src/: auth.rs  cli.rs  config.rs  core.rs  headless.rs  hook.rs  interactive.rs  llm.rs  main.rs  protocol.rs
src/cosh-ng/crates/cosh-tui/tests/: jsonl_protocol.rs  tool_approval.rs
src/cosh-ng/crates/cosh-types/: Cargo.toml
src/cosh-ng/crates/cosh-types/src/: audit.rs  (+2 more)
src/skillfs/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  component.toml  skillfs.spec.in
src/skillfs/crates/skillfs-cli/: Cargo.toml
src/skillfs/crates/skillfs-core/: Cargo.toml
src/skillfs/crates/skillfs-fuse/: Cargo.toml
src/skillfs/docs/: skillfs-filesystem-capability-record.md
src/skillfs/docs/architecture/: fuse-crate-layout.md
src/skillfs/docs/security/: external-decision-protocol.md  runtime-activation-implementation-plan.md
src/skillfs/docs/specs/: core-spec.md  fuse-spec.md  skillfs-spec.md
src/skillfs/scripts/: build.sh  test.sh
src/tokenless/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile  tokenless.spec.in
src/tokenless/.anolisa/: component.toml  component.toml.in
src/tokenless/adapters/tokenless/: manifest.json.in
src/tokenless/crates/tokenless-cli/: Cargo.toml
src/tokenless/crates/tokenless-schema/: Cargo.toml
src/tokenless/crates/tokenless-stats/: Cargo.toml
src/tokenless/docs/: response-compression.md  tokenless-user-manual-en.md  tokenless-user-manual-zh.md
src/tokenless/tests/: run-all-tests.sh
(+680 files in other folders)
