[workspace]
resolver = "2"
members = [
    "crates/anolisa-cli",
    "crates/anolisa-core",
    "crates/anolisa-env",
    "crates/anolisa-build",
    "crates/anolisa-platform",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Terminal UI
console = "0.15"

# Data structures
petgraph = "0.6"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Linux / System
dirs = "6"
nix = { version = "0.29", features = ["fs", "process", "user"] }

# File integrity
sha2 = "0.10"

# HTTP download
ureq = "2.12"

# Archive handling
flate2 = "1"
tar = "0.4"

# File locking
fs2 = "0.4"

# Test utilities
tempfile = "3"

# Internal crates
anolisa-core = { path = "crates/anolisa-core" }
anolisa-env = { path = "crates/anolisa-env" }
anolisa-build = { path = "crates/anolisa-build" }
anolisa-platform = { path = "crates/anolisa-platform" }
