[workspace]
resolver = "2"
members = [
    "crates/anolisa-cli",
    "crates/anolisa-core",
    "crates/anolisa-env",
    "crates/anolisa-build",
    "crates/anolisa-platform",
]

[workspace.package]
version = "0.1.17"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
publish = false

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# AST-level TOML editing — used by sandbox_install.rs to patch
# /etc/containerd/config.toml without losing user comments / ordering and
# without producing duplicate plugin tables (containerd 2.x is strict).
toml_edit = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Terminal UI
console = "0.15"

# Data structures
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }

# Linux / System
dirs = "6"
nix = { version = "0.29", default-features = false, features = ["user", "fs", "socket"] }

# File integrity
sha2 = "0.10"

# Encoding
base64 = "0.22"

# HTTP download
ureq = "2.12"

# Archive handling
flate2 = "1"
tar = "0.4"

# File locking
fs2 = "0.4"

# Unique identifiers
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }

# Test utilities
tempfile = "3"

# Internal crates
anolisa-core = { path = "crates/anolisa-core" }
anolisa-env = { path = "crates/anolisa-env" }
anolisa-build = { path = "crates/anolisa-build" }
anolisa-platform = { path = "crates/anolisa-platform" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
debug = true
strip = "debuginfo"
split-debuginfo = "packed"
