[workspace]
resolver = "2"
members = [
    "crates/tokenless-schema",
    "crates/tokenless-cli",
    "crates/tokenless-stats",
]
exclude = [
    "third_party/rtk",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
toon-format = { version = "0.5", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
