[package]
name = "anolisa-build"
version.workspace = true
edition.workspace = true

[dependencies]
anolisa-core.workspace = true
anolisa-env.workspace = true
anolisa-platform.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
