[package]
name = "anolisa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "anolisa"
path = "src/main.rs"

[dependencies]
anolisa-core.workspace = true
anolisa-env.workspace = true
anolisa-build.workspace = true
anolisa-platform.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
console.workspace = true
dirs.workspace = true
ureq.workspace = true
semver.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
flate2.workspace = true
tar.workspace = true
