[package]
name = "cosh-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cosh-types = { path = "../cosh-types" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
chrono = { workspace = true, features = ["clock", "serde"] }
toml.workspace = true
sha2.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile = "3"
