[package]
name = "cosh-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosh-shell"
path = "src/main.rs"

[dependencies]
nix = { workspace = true, features = ["term"] }
ratatui = "0.28"
serde.workspace = true
serde_json.workspace = true
wait-timeout = "0.2"
