[package]
name = "cosh-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cosh-shell"
path = "src/main.rs"

[dependencies]
nix = { workspace = true, features = ["term"] }
ratatui = "0.28"
serde.workspace = true
serde_json.workspace = true
wait-timeout = "0.2"
