[package]
name = "cosh-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified TUI component for cosh — agent core + interactive TUI + headless JSONL backend"

[[bin]]
name = "cosh-tui"
path = "src/main.rs"

[dependencies]
clap.workspace = true
atty = "0.2"
cosh-types = { path = "../cosh-types" }
cosh-platform = { path = "../cosh-platform" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json", "native-tls"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
dirs = "5"
chrono = { workspace = true, features = ["clock"] }
which.workspace = true
toml.workspace = true
regex.workspace = true
aes-gcm = "0.10"
scrypt = "0.11"

[dev-dependencies]
tempfile = "3"
