[package]
name = "skillfs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "FUSE virtual filesystem layer for SkillFS"

[dependencies]
skillfs-core = { workspace = true }
fuser = { version = "0.15", features = ["abi-7-23"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
